<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/triangles"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


        <TextView
            android:layout_marginTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tsogatec"
            android:layout_gravity="center"
            android:textSize="38dp"
            android:background="@drawable/titlebackground"
            android:textColor="@color/loginTxtColor"
            />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:elevation="10dp"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/usernameInputField"
            android:hint="@string/usernameLabel"
            android:inputType="textNoSuggestions"
            android:background="@drawable/inputfieldbackground"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/passwordLabel"
            android:id="@+id/passwordInputField"
            android:background="@drawable/inputfieldbackground"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:layout_marginTop="170dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/warningText"
            android:textColor="@color/red"
            android:gravity="center"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/loginBtn"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:id="@+id/loginBtn"
            android:background="@drawable/buttonbackground"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="270dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/average"
                android:text="@string/registerLabel"
                android:textColor="@color/material_grey_600" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forgotPasswordLabel"
                android:textColor="@color/material_grey_600"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>